syntax = "proto3";

package comment.api.comment.v1;

option go_package = "/comment/api/comment/v1;v1";

import "google/api/annotations.proto";

service CommentService {
  // 发布/删除评论
  rpc Comment (douyin_comment_send_request) returns (douyin_comment_send_response) {
    option (google.api.http) = {
      post: "/douyin/comment/action"
      body: "*"
    };
  }

  // 获取评论列表
  rpc CommentList (douyin_comment_list_request) returns (douyin_comment_list_response) {
    option (google.api.http) = {
      get: "/douyin/comment/list"
    };
  }

  // 获取视频评论总数
  rpc GetCommentCntByVId (GetCommentCntByVIdReq) returns (GetCommentCntByVIdResp) {
    option (google.api.http) = {
      get: "/douyin/comment/count/video"
    };
  }
}

message Comment {
  int64 id = 1  [json_name = "id"]; // 视频评论id
  User user = 2 [json_name = "user"]; // 评论用户信息
  string content = 3 [json_name = "content"]; // 评论内容
  string create_date = 4 [json_name = "create_date"]; // 评论发布日期，格式 mm-dd
}


message User {
  int64 id = 1 [json_name = "id"]; // 用户id
  string name = 2 [json_name = "name"]; // 用户名称
  int64 follow_count = 3 [json_name = "follow_count"]; // 关注总数
  int64 follower_count = 4 [json_name = "follower_count"]; // 粉丝总数
  bool is_follow = 5 [json_name = "is_follow"]; // true-已关注，false-未关注
  string avatar = 6 [json_name = "avatar"]; // 用户头像
  string background_image = 7 [json_name = "background_image"]; // 用户个人页顶部大图
  string signature = 8 [json_name = "signature"]; // 个人简介
  int64 total_favorited = 9 [json_name = "total_favorited"]; // 获赞数量
  int64 work_count = 10 [json_name = "work_count"]; // 作品数量
  int64 favorite_count = 11 [json_name = "favorite_count"]; // 点赞数量
}


message douyin_comment_send_request {
  string token = 1; // 用户鉴权token
  int64 video_id = 2; // 视频id
  string action_type = 3; // 1-发布评论，2-删除评论
  string comment_text = 4; // 用户填写的评论内容，在 action_type=1 时使用
  int64 comment_id = 5; // 要删除的评论 id，在 action_type=2 时使用
}

message douyin_comment_send_response {
  int32 status_code = 1 [json_name = "status_code"]; // 状态码，0-成功，其他值-失败
  string status_msg = 2 [json_name = "status_msg"]; // 返回状态描述
  Comment comment = 3 [json_name = "comment"]; // 评论成功返回评论内容，不需要重新拉取整个列表
}

message douyin_comment_list_request {
  string token = 1; // 用户鉴权token
  int64 video_id = 2; // 视频id
}

message douyin_comment_list_response {
  int32 status_code = 1 [json_name = "status_code"]; // 状态码，0-成功，其他值-失败
  string status_msg = 2 [json_name = "status_msg"]; // 返回状态描述
  repeated Comment comment_list = 3 [json_name = "comment_list"]; // 评论列表
}

message GetCommentCntByVIdReq {
  int64 video_id = 1; // 视频唯一标识
}

message GetCommentCntByVIdResp {
  int64 comment_count = 1; // 视频的评论总数
}
